--- a/package.json
+++ b/package.json
@@ -1,53 +1,19 @@
 {
-  "name": "vgl-project3",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "bcrypt": "^5.0.1",
-    "express": "^4.17.2",
-    "mongoose": "^6.1.8",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "server/server.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eeleelksm/vg-library.git"
-  },
-  "author": "Keshia-Lee Martin",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/eeleelksm/vg-library/issues"
-  },
-  "homepage": "https://github.com/eeleelksm/vg-library#readme"
+	"name": "vg-library",
+	"version": "1.0.0",
+	"description": "P3-MERN full stack application",
+	"main": "server/server.js",
+	"scripts": {
+		"start": "node server/server.js",
+		"develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+		"install": "cd server && npm i && cd ../client && npm i",
+		"seed": "cd server && npm run seed",
+		"build": "cd client && npm run build"
+	},
+	"keywords": [],
+	"author": "Keshia-Lee Martin",
+	"license": "ISC",
+	"devDependencies": {
+		"concurrently": "^7.0.0"
+	}
 }
