--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,10 @@
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.1",
 		"express": "^4.17.2",
+		"graphql": "^16.2.0",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.1.8"
+		"mongoose": "^6.1.8",
+		"react-router-dom": "^6.2.1"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.15"
