--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"watch": "nodemon server.js",
-		"seed": "node seeds/seeds.js"
+		"watch": "nodemon server.js"
 	},
 	"author": "",
 	"license": "ISC",
