--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"concurrently": "^7.0.0"
 	},
 	"dependencies": {
-		"dotenv": "^14.3.1"
+		"dotenv": "^14.3.1",
+		"framer-motion": "^5.6.0",
+		"node-sass": "^7.0.1"
 	}
 }
