--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"concurrently": "^7.0.0"
 	},
 	"dependencies": {
+		"antd": "^4.18.5",
 		"dotenv": "^14.3.1",
 		"framer-motion": "^5.6.0",
 		"node-sass": "^7.0.1"
