--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"antd": "^4.18.5",
 		"dotenv": "^14.3.1",
 		"framer-motion": "^5.6.0",
-		"node-sass": "^7.0.1"
+		"node-sass": "^7.0.1",
+		"react-dom": "^17.0.2"
 	}
 }
