--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,17 @@
 	},
 	"private": true,
 	"dependencies": {
+		"@apollo/client": "^3.5.8",
+		"@emotion/react": "^11.7.1",
+		"@emotion/styled": "^11.6.0",
+		"@mui/material": "^5.4.0",
 		"@testing-library/jest-dom": "^5.16.1",
 		"@testing-library/react": "^12.1.2",
 		"@testing-library/user-event": "^13.5.0",
 		"bcrypt": "^5.0.1",
 		"express": "^4.17.2",
 		"framer-motion": "^5.6.0",
+		"graphql": "^16.3.0",
 		"mongoose": "^6.1.8",
 		"react": "^17.0.2",
 		"react-scripts": "5.0.0",
