--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
 		"concurrently": "^7.0.0"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.7.1",
+		"@emotion/styled": "^11.6.0",
+		"@mui/icons-material": "^5.3.1",
+		"@mui/material": "^5.4.0",
 		"antd": "^4.18.5",
 		"dotenv": "^14.3.1",
 		"framer-motion": "^5.6.0",
