--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
 		"express": "^4.17.2",
 		"framer-motion": "^5.6.0",
 		"graphql": "^16.3.0",
+		"jwt-decode": "^3.1.2",
 		"mongoose": "^6.1.8",
 		"react": "^17.0.2",
 		"react-scripts": "5.0.0",
