--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
 		"mongoose": "^6.1.8",
 		"react": "^17.0.2",
 		"react-scripts": "5.0.0",
+		"react-select": "^5.2.2",
 		"web-vitals": "^2.1.4"
 	},
 	"eslintConfig": {
