--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"antd": "^4.18.5",
 		"dotenv": "^14.3.1",
 		"framer-motion": "^5.6.0",
+		"jwt-decode": "^3.1.2",
 		"node-sass": "^7.0.1",
 		"react-dom": "^17.0.2"
 	}
