--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
 		"express": "^4.17.2",
 		"graphql": "^16.2.0",
 		"jsonwebtoken": "^8.5.1",
+		"jwt-decode": "^3.1.2",
 		"mongoose": "^6.1.8",
 		"react-router-dom": "^6.2.1"
 	},
