--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "vgl-project3",
 	"version": "0.1.0",
+	"proxy": "http://localhost:3003",
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
@@ -23,6 +24,7 @@
 		"jwt-decode": "^3.1.2",
 		"mongoose": "^6.1.8",
 		"react": "^17.0.2",
+		"react-router-dom": "^5.3.0",
 		"react-scripts": "5.0.0",
 		"react-select": "^5.2.2",
 		"web-vitals": "^2.1.4"
