--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
 		"mongoose": "^6.1.8",
 		"react": "^17.0.2",
 		"react-router-dom": "^5.3.0",
-		"react-scripts": "5.0.0",
+		"react-scripts": "^5.0.0",
 		"react-select": "^5.2.2",
 		"web-vitals": "^2.1.4"
 	},
@@ -46,5 +46,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"sass": "^1.49.7"
 	}
 }
