--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	"author": "Keshia-Lee Martin",
 	"license": "ISC",
 	"devDependencies": {
-		"concurrently": "^7.0.0"
+		"concurrently": "^7.0.0",
+		"sass": "^1.49.7"
 	},
 	"dependencies": {
 		"@emotion/styled": "^11.6.0",
@@ -24,7 +25,6 @@
 		"dotenv": "^14.3.1",
 		"framer-motion": "^5.6.0",
 		"jwt-decode": "^3.1.2",
-		"node-sass": "^7.0.1",
 		"react-dom": "^17.0.2"
 	}
 }
