--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"dotenv": "^14.3.1",
 		"framer-motion": "^5.6.0",
 		"jwt-decode": "^3.1.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"react-query": "^3.34.12"
 	}
 }
