--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"antd": "^4.18.5",
 		"dotenv": "^14.3.1",
 		"framer-motion": "^5.6.0",
+		"ityped": "^1.0.3",
 		"jwt-decode": "^3.1.2",
 		"react-dom": "^17.0.2",
 		"react-query": "^3.34.12"
